[gd_scene load_steps=11 format=3 uid="uid://d0cdrnjgeyx4y"]

[ext_resource type="Script" path="res://Scenes/button.gd" id="1_e7nit"]

[sub_resource type="BoxMesh" id="BoxMesh_a5tu2"]

[sub_resource type="CylinderMesh" id="CylinderMesh_t6rkg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sjl1s"]
albedo_color = Color(0.686275, 0, 0.835294, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8xv1h"]
radius = 0.49372

[sub_resource type="BoxShape3D" id="BoxShape3D_a6l8f"]
size = Vector3(1, 0.0699387, 1)

[sub_resource type="Animation" id="Animation_3c6h3"]
resource_name = "PressDown"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.0597967, 0), Vector3(0, 0.00862581, 0)]
}

[sub_resource type="Animation" id="Animation_s0r7k"]
resource_name = "PressUp"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.00862581, 0), Vector3(0, 0.0597967, 0)]
}

[sub_resource type="Animation" id="Animation_p206j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.0597967, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_klce7"]
_data = {
"PressDown": SubResource("Animation_3c6h3"),
"PressUp": SubResource("Animation_s0r7k"),
"RESET": SubResource("Animation_p206j")
}

[node name="CircleButton" type="StaticBody3D"]
script = ExtResource("1_e7nit")

[node name="Base" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0832174, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_a5tu2")

[node name="Button" type="MeshInstance3D" parent="."]
transform = Transform3D(0.9, 0, 0, 0, 0.04, 0, 0, 0, 0.9, 0, 0.0597967, 0)
mesh = SubResource("CylinderMesh_t6rkg")
surface_material_override/0 = SubResource("StandardMaterial3D_sjl1s")

[node name="ButtonCollision" type="StaticBody3D" parent="Button"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Button/ButtonCollision"]
shape = SubResource("CylinderShape3D_8xv1h")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.000410959, 0)
shape = SubResource("BoxShape3D_a6l8f")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.073814, 0)
shape = SubResource("BoxShape3D_a6l8f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_klce7")
}

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
